# rye-template

./: README.md  pyproject.toml
src/rye_template/: __init__.py
