[project]
name = "rye-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shuhei izaki", email = "zakipr.roni29@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
show_error_context = true
show_column_numbers = true